frontend/src/routes/HomeRoute/HomeRoute.scss
@import "../../styles/variables.scss";

@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.content-wrapper {
  overflow: auto;
  max-height: 100%;

  .content-container {
    padding: 50px;
    max-width: 1200px;
    margin: 20vh auto 0 auto;

    display: grid;
    grid-template-rows: max-content;
    // Need minmax(0, 1fr) to prevent items from overflowing grid column (if it was just 1fr) - https://css-tricks.com/preventing-a-grid-blowout/
    grid-template-columns: minmax(0, 1fr);
    grid-template-areas:
      "header"
      "buttons"
      "recent-rooms";
    gap: 50px;

    justify-items: center;

    @media screen and (max-width: 875px) {
      padding: 15px;
      // gap: 20px;
      grid-template-areas:
        "header"
        "buttons"
        "recent-rooms";
      grid-template-columns: 100%;
    }

    %homepage-custom-card {
      padding: 25px;

      opacity: 0;
    }

    %fadein-animation {
      animation: fadein 2s ease forwards;
    }

    .header-container {
      @extend %fadein-animation;

      grid-area: header;
      display: flex;
      justify-self: stretch;
      justify-content: center;
      align-items: center;

      .logo {
        flex-grow: 1;
        grid-area: logo;
        max-width: 800px;

        path {
          fill: $text-color-dark;
        }
      }
    }

    .buttons-container {
      @extend %fadein-animation;

      grid-area: buttons;

      display: flex;
      flex-flow: row nowrap;
      justify-content: center;
      align-items: center;
    }

    .recent-rooms-container {
      @extend %fadein-animation;

      grid-area: recent-rooms;
      max-width: 100%;

      .recent-rooms-card {
        display: flex;
        flex-flow: column nowrap;
        align-items: center;
        margin-top: 50px;
        min-width: 50%;

        .recent-rooms {
          display: flex;
          flex-flow: row nowrap;
          max-width: 100%;
          overflow-x: auto;
          padding: 15px;

          & > * {
            flex-shrink: 0;
          }

          & > * {
            margin-left: 25px;
          }
          :first-child {
            margin-left: 0;
          }
        }
      }
    }
  }
}

#background-canvas {
  position: fixed;
  width: 100vw;
  height: 100vh;
  left: 0;
  top: 0;
  z-index: -10;
  border: none;
}

